# mem_usage_ui

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pypi-deploy.yml
backend/static/js/: build.js
frontend/: package-lock.json  package.json  webpack.config.js
frontend/src/: App.vue  Chart.vue  bus.js  main.js  websocket.js
frontend/src/components/: Contacts.vue
mem_usage_ui/: __init__.py  __main__.py  monitor.py  routes.py  settings.py  snapshot.py  views.py
mem_usage_ui/static/js/: build.js  build.js.LICENSE.txt  build.js.map
mem_usage_ui/templates/: index.html
mem_usage_ui/tests/: test_views.py
